fix contrast in you messages

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -239,7 +239,7 @@ blockquote {
 .you {
   background: linear-gradient(155deg, $main-color, $sec-color);
   border-radius: 1em 1em .25em;
-  color: white;
+  color: $text;
   float: left;
   margin: .5em 0 .4em 3em;
   padding: .8em;
